force-app/main/default/objects/Order/fields/Cargar_pedido_oracle__c.field-meta.xml
<CustomField>
    <fullName>Cargar_pedido_oracle__c</fullName>
    <formula>DATEVALUE( LastModifiedDate ) = TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cargar pedido oracle</label>
    <type>Checkbox</type>
</CustomField>