force-app/main/default/objects/Order/fields/Dan360_ClienteQueSolicitaPedido__c.field-meta.xml
<CustomField>
    <fullName>Dan360_ClienteQueSolicitaPedido__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo que el comercial diligenciará cuando un cliente le solicite crear un pedido.</description>
    <label>Cliente que solicita el pedido</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Pedidos</relationshipName>
    <type>Lookup</type>
</CustomField>