force-app/main/default/objects/Order/fields/Dan360_ContarProductos__c.field-meta.xml
<CustomField>
    <fullName>Dan360_ContarProductos__c</fullName>
    <label>Contar Productos</label>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>