force-app/main/default/objects/Order/fields/Dan360_CustomerSalesArea__c.field-meta.xml
<CustomField>
    <fullName>Dan360_CustomerSalesArea__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Customer Sales Area relacionado al pedido</description>
    <label>Customer Sales Area</label>
    <referenceTo>Dan360_CustomerSalesArea__c</referenceTo>
    <relationshipLabel>Pedidos</relationshipLabel>
    <relationshipName>Pedidos</relationshipName>
    <type>Lookup</type>
</CustomField>