force-app/main/default/objects/Order/fields/Dan360_En_aprobacion__c.field-meta.xml
<CustomField>
    <fullName>Dan360_En_aprobacion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>En proceso de aprobacion</label>
    <type>Checkbox</type>
</CustomField>