force-app/main/default/objects/Order/fields/Dan360_FechaCierreCarrito__c.field-meta.xml
<CustomField>
    <fullName>Dan360_FechaCierreCarrito__c</fullName>
    <description>Fecha-hora de cierre de carrito</description>
    <label>Fecha Cierre Carrito</label>
    <type>DateTime</type>
</CustomField>