force-app/main/default/objects/Order/fields/Dan360_FechaConfirmado__c.field-meta.xml
<CustomField>
    <fullName>Dan360_FechaConfirmado__c</fullName>
    <label>FechaConfirmado</label>
    <type>Date</type>
</CustomField>