force-app/main/default/objects/Order/fields/Dan360_FechaInicioCarrito__c.field-meta.xml
<CustomField>
    <fullName>Dan360_FechaInicioCarrito__c</fullName>
    <description>Fecha-hora de inicio carrito</description>
    <label>Fecha Inicio Carrito</label>
    <type>DateTime</type>
</CustomField>