force-app/main/default/objects/Order/fields/Dan360_FechasConfirmado__c.field-meta.xml
<CustomField>
    <fullName>Dan360_FechasConfirmado__c</fullName>
    <label>Fecha Confirmado</label>
    <type>DateTime</type>
</CustomField>