force-app/main/default/objects/Order/fields/Dan360_Id_Externo__c.field-meta.xml
<CustomField>
    <fullName>Dan360_Id_Externo__c</fullName>
    <description>Id Externo de la órdenes. Se diligenciará a través de una automatización para replicar el número de la orden de Salesforce.</description>
    <externalId>true</externalId>
    <label>Id Externo</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>