force-app/main/default/objects/Order/fields/Dan360_Id_SAP__c.field-meta.xml
<CustomField>
    <fullName>Dan360_Id_SAP__c</fullName>
    <externalId>true</externalId>
    <label>Id SAP</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>