force-app/main/default/objects/Order/fields/Dan360_Necesita_aprobacion__c.field-meta.xml
<CustomField>
    <fullName>Dan360_Necesita_aprobacion__c</fullName>
    <formula>AND(
    RecordType.DeveloperName = &apos;Dan360_PedidoSinCargo&apos;,
    OR(
        ISPICKVAL(Status,&quot;Confirmado&quot;),
        ISPICKVAL(Status,&quot;Procesado&quot;)
				)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Necesita aprobacion</label>
    <type>Checkbox</type>
</CustomField>