force-app/main/default/objects/Order/fields/Dan360_NumeroClienteSAP__c.field-meta.xml
<CustomField>
    <fullName>Dan360_NumeroClienteSAP__c</fullName>
    <formula>Account.Id_SAP__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Número de cliente SAP</label>
    <type>Text</type>
</CustomField>