force-app/main/default/objects/Order/fields/Dan360_OrderReason__c.field-meta.xml
<CustomField>
    <fullName>Dan360_OrderReason__c</fullName>
    <description>Razón por la cuál se genera un pedido sin cargo.</description>
    <label>Razón del pedido</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AT3</fullName>
                <label>Beneficios Empleados</label>
            </value>
            <value>
                <fullName>AF7</fullName>
                <label>Donaciones</label>
            </value>
            <value>
                <fullName>SMA</fullName>
                <label>Marketing Adultos</label>
            </value>
            <value>
                <fullName>SMC</fullName>
                <label>Marketing Consumer</label>
            </value>
            <value>
                <fullName>SMP</fullName>
                <label>Marketing Pediátrico</label>
            </value>
            <value>
                <fullName>APP</fullName>
                <label>Promoción Farmacias</label>
            </value>
            <value>
                <fullName>APN</fullName>
                <label>Reclamo de Calidad-Arg</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>