force-app/main/default/objects/Order/fields/Dan360_PedidoConfirmado__c.field-meta.xml
<CustomField>
    <fullName>Dan360_PedidoConfirmado__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Casilla para notificación de pedido confirmado</description>
    <label>Pedido confirmado</label>
    <type>Checkbox</type>
</CustomField>