force-app/main/default/objects/Order/fields/Dan360_PedidoPrincipal__c.field-meta.xml
<CustomField>
    <fullName>Dan360_PedidoPrincipal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Pedido principal para pedidos desdoblados por deborde.</description>
    <label>Pedido Principal</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Pedidos Retenidos por cuota</relationshipLabel>
    <relationshipName>Pedidos</relationshipName>
    <type>Lookup</type>
</CustomField>