force-app/main/default/objects/Order/fields/Dan360_PedidoSinCargoAprobado__c.field-meta.xml
<CustomField>
    <fullName>Dan360_PedidoSinCargoAprobado__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica que el pedido sin cargo ya está aprobado para continuar con el proceso del pedido.</description>
    <label>Pedido sin cargo aprobado</label>
    <type>Checkbox</type>
</CustomField>