force-app/main/default/objects/Order/fields/Dan360_PlantillaProductos__c.field-meta.xml
<CustomField>
    <fullName>Dan360_PlantillaProductos__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo que se va a llenar con desarrollo para conocer la plantilla que se relaciona al pedido.</description>
    <label>Plantilla de Productos</label>
    <referenceTo>Dan360_PlantillaDeProductos__c</referenceTo>
    <relationshipLabel>Pedidos</relationshipLabel>
    <relationshipName>Pedidos</relationshipName>
    <type>Lookup</type>
</CustomField>