force-app/main/default/objects/Order/fields/Dan360_Registro_aprobado__c.field-meta.xml
<CustomField>
    <fullName>Dan360_Registro_aprobado__c</fullName>
    <defaultValue>false</defaultValue>
    <description>usado para procesos de aprobacion</description>
    <label>Registro aprobado</label>
    <type>Checkbox</type>
</CustomField>