force-app/main/default/objects/Order/fields/Dan360_Semaforo__c.field-meta.xml
<CustomField>
    <fullName>Dan360_Semaforo__c</fullName>
    <description>Campo que indica si ya es posible confirmar un pedido total o parcialmente.</description>
    <formula>IF(
   ISPICKVAL(Dan360_SemaforoPicklist__c,&quot;Verde&quot;),&quot;🟢&quot;,
            IF(ISPICKVAL(Dan360_SemaforoPicklist__c,&quot;Amarillo&quot;),&quot;🟡&quot;,
                IF(ISPICKVAL(Dan360_SemaforoPicklist__c,&quot;Rojo&quot;),&quot;🔴&quot;
   ,&quot;&quot;
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Semáforo</label>
    <type>Text</type>
</CustomField>