force-app/main/default/objects/Order/fields/Dan360_SemaforoPicklist__c.field-meta.xml
<CustomField>
    <fullName>Dan360_SemaforoPicklist__c</fullName>
    <description>Señala el color del semáforo (Verde, amarillo o rojo) dependiendo de la cuota disponible para el pedido.</description>
    <label>SemaforoPicklist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rojo</fullName>
            </value>
            <value>
                <fullName>Amarillo</fullName>
            </value>
            <value>
                <fullName>Verde</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>