force-app/main/default/objects/Order/fields/Dan360_TiempoTranscurrido__c.field-meta.xml
<CustomField>
    <fullName>Dan360_TiempoTranscurrido__c</fullName>
    <description>Campo que calcula el tiempo transcurrido desde que un pedido fue confirmado</description>
    <formula>IF(ISPICKVAL(Status, &apos;Confirmado&apos;), (NOW() - Dan360_FechasConfirmado__c) *  24, Null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tiempo Transcurrido Hrs.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>