force-app/main/default/objects/Order/fields/Dan360_TipoDeCuenta__c.field-meta.xml
<CustomField>
    <fullName>Dan360_TipoDeCuenta__c</fullName>
    <formula>IF(Account.ParentId  &lt;&gt; &quot;&quot;, &apos;Sucursal&apos;, &apos;Institución&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tipo</label>
    <type>Text</type>
</CustomField>