force-app/main/default/objects/Order/fields/FECHAPRUEBA__c.field-meta.xml
<CustomField>
    <fullName>FECHAPRUEBA__c</fullName>
    <label>FECHAPRUEBA</label>
    <type>Date</type>
</CustomField>