force-app/main/default/objects/Order/fields/Id_lista_de_precios__c.field-meta.xml
<CustomField>
    <fullName>Id_lista_de_precios__c</fullName>
    <formula>Pricebook2.Id_lista_combinada__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Id lista de precios</label>
    <type>Text</type>
</CustomField>