force-app/main/default/objects/Order/fields/Id_origen_de_pedido__c.field-meta.xml
<CustomField>
    <fullName>Id_origen_de_pedido__c</fullName>
    <formula>Account.Parent.Id_origen_orden__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Id origen de pedido</label>
    <type>Text</type>
</CustomField>