force-app/main/default/objects/Order/fields/Nombre_del_cliente__c.field-meta.xml
<CustomField>
    <fullName>Nombre_del_cliente__c</fullName>
    <formula>Account.Parent.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre del cliente</label>
    <type>Text</type>
</CustomField>