force-app/main/default/objects/Order/fields/Orden_de_compra__c.field-meta.xml
<CustomField>
    <fullName>Orden_de_compra__c</fullName>
    <label>Orden de compra</label>
    <length>35</length>
    <type>Text</type>
</CustomField>