force-app/main/default/objects/Order/fields/Org_id__c.field-meta.xml
<CustomField>
    <fullName>Org_id__c</fullName>
    <formula>Account.Id_sucursal_oracle__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Org id</label>
    <type>Text</type>
</CustomField>