force-app/main/default/objects/Order/fields/Pedido_listo__c.field-meta.xml
<CustomField>
    <fullName>Pedido_listo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pedido listo</label>
    <type>Checkbox</type>
</CustomField>