force-app/main/default/objects/Order/fields/Sales_District_Colaboration_Rule__c.field-meta.xml
<CustomField>
    <fullName>Sales_District_Colaboration_Rule__c</fullName>
    <label>Sales District Colaboration Rule</label>
    <length>255</length>
    <type>Text</type>
</CustomField>