force-app/main/default/objects/Order/fields/Ship_from_org_id__c.field-meta.xml
<CustomField>
    <fullName>Ship_from_org_id__c</fullName>
    <formula>Pricebook2.Warehouse_id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ship from org id</label>
    <type>Text</type>
</CustomField>