force-app/main/default/objects/Order/fields/Sold_to_org_Id__c.field-meta.xml
<CustomField>
    <fullName>Sold_to_org_Id__c</fullName>
    <formula>Account.Parent.Id_customer_oracle__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sold to org Id</label>
    <type>Text</type>
</CustomField>