force-app/main/default/objects/Order/fields/Status_SAP__c.field-meta.xml
<CustomField>
    <fullName>Status_SAP__c</fullName>
    <label>Status SAP</label>
    <type>TextArea</type>
</CustomField>