force-app/main/default/objects/Order/recordTypes/Dan360_PedidoSinCargo.recordType-meta.xml
<RecordType>
    <fullName>Dan360_PedidoSinCargo</fullName>
    <active>true</active>
    <label>Pedido sin Cargo</label>
</RecordType>