force-app/main/default/objects/Order/recordTypes/Dan360_PedidoVentaDirecta.recordType-meta.xml
<RecordType>
    <fullName>Dan360_PedidoVentaDirecta</fullName>
    <active>true</active>
    <label>Pedido de Venta Directa</label>
</RecordType>