force-app/main/default/objects/Order/validationRules/Cliente_inactivo.validationRule-meta.xml
<ValidationRule>
    <fullName>Cliente_inactivo</fullName>
    <active>true</active>
    <errorConditionFormula>Account.Status__c != &apos;#&apos;</errorConditionFormula>
    <errorMessage>El cliente se encuentra bloqueado, no es posible realizar pedidos.</errorMessage>
</ValidationRule>