force-app/main/default/objects/Order/validationRules/Dan360_BloquearUnidadDeNegocio.validationRule-meta.xml
<ValidationRule>
    <fullName>Dan360_BloquearUnidadDeNegocio</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
				NOT(ISNEW()),
				 ISCHANGED(Dan360_UnidadNegocio__c),
					$Profile.Name &lt;&gt; &quot;System Administrator&quot; 

				)</errorConditionFormula>
    <errorMessage>La Unidad de Negocio no puede ser cambiada</errorMessage>
</ValidationRule>