force-app/main/default/objects/Order/validationRules/Dan360_ModificarEstadoManualmente.validationRule-meta.xml
<ValidationRule>
    <fullName>Dan360_ModificarEstadoManualmente</fullName>
    <active>false</active>
    <description>Validación que no permite modificar el estado manualmente.</description>
    <errorConditionFormula>AND(
NOT(ISNEW()),
ISCHANGED( Status ),
NOT( Dan360_PedidoConfirmado__c )
)</errorConditionFormula>
    <errorDisplayField>Status</errorDisplayField>
    <errorMessage>No es posible modificar el estado de un pedido manualmente.</errorMessage>
</ValidationRule>