force-app/main/default/objects/Order/validationRules/No_crear_ordenes_a_salesdistric_AR3TEN.validationRule-meta.xml
<ValidationRule>
    <fullName>No_crear_ordenes_a_salesdistric_AR3TEN</fullName>
    <active>true</active>
    <errorConditionFormula>Account.SALESDISTRICTID__c = &apos;AR3TEN&apos;</errorConditionFormula>
    <errorMessage>No es posible crear ordenes para ese distrito de ventas.</errorMessage>
</ValidationRule>