force-app/main/default/objects/Order/validationRules/No_crear_pedido_a_sucursal_facturacion.validationRule-meta.xml
<ValidationRule>
    <fullName>No_crear_pedido_a_sucursal_facturacion</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(ISPICKVAL( Account.Tipo_sucursal__c, &apos;SHIP_TO&apos;))</errorConditionFormula>
    <errorDisplayField>AccountId</errorDisplayField>
    <errorMessage>Usted no puede crear un pedido a una sucursal de facturación. Por favor, ingrese una sucursal de envío.</errorMessage>
</ValidationRule>