force-app/main/default/objects/Order/validationRules/No_es_distribution_channel_00.validationRule-meta.xml
<ValidationRule>
    <fullName>No_es_distribution_channel_00</fullName>
    <active>true</active>
    <description>Solo se permite cargar pedidos si el distribution channel es 00.</description>
    <errorConditionFormula>Account.DISTRIBUTIONCHANNELID__c != &apos;00&apos;</errorConditionFormula>
    <errorMessage>Solo se permiten cargar pedidos a cuentas cuyo Canal es 00.</errorMessage>
</ValidationRule>