force-app/main/default/objects/Order/validationRules/No_se_puede_modificar_Pedido_Retenido.validationRule-meta.xml
<ValidationRule>
    <fullName>No_se_puede_modificar_Pedido_Retenido</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
AND(
ISPICKVAL(PRIORVALUE(Status) , &quot;Retenido por cuota&quot;),
NOT($Permission.Edit_Orders_Retenidas) 
),
AND(
			ISPICKVAL(PRIORVALUE(Status) , &quot;Borrador&quot;),
			$Permission.Sin_edicion_de_pedidos_en_borrador 
)
)</errorConditionFormula>
    <errorMessage>No posee permiso para editar este pedido.</errorMessage>
</ValidationRule>