force-app/main/default/objects/Order/listViews/AllOrders.listView-meta.xml
<ListView>
    <fullName>AllOrders</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>Nombre_del_cliente__c</columns>
    <columns>ORDERS.TOTAL_AMOUNT</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>ORDERS.STATUS</columns>
    <columns>ORDER.CUSTOMER_AUTHORIZED_BY</columns>
    <columns>Sold_to_org_Id__c</columns>
    <columns>ORDER.SHIPPING_STREET</columns>
    <columns>ORDER.SHIPPING_CITY</columns>
    <filterScope>Everything</filterScope>
    <label>Todos los pedidos</label>
</ListView>