force-app/main/default/objects/Order/listViews/Dan360_PedidosEnBorrador.listView-meta.xml
<ListView>
    <fullName>Dan360_PedidosEnBorrador</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>ORDERS.TOTAL_AMOUNT</columns>
    <columns>ORDERS.STATUS</columns>
    <columns>ORDER.RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ORDERS.STATUS</field>
        <operation>equals</operation>
        <value>Borrador</value>
    </filters>
    <label>Pedidos en borrador</label>
</ListView>