force-app/main/default/objects/Order/listViews/Dan360_PedidosRetenidosCuota.listView-meta.xml
<ListView>
    <fullName>Dan360_PedidosRetenidosCuota</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>ORDERS.TOTAL_AMOUNT</columns>
    <columns>ORDERS.STATUS</columns>
    <columns>Dan360_Semaforo__c</columns>
    <columns>Orden_de_compra__c</columns>
    <columns>ORDERS.CREATED_DATE</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ORDERS.STATUS</field>
        <operation>equals</operation>
        <value>Retenido por cuota</value>
    </filters>
    <label>Pedidos retenidos por cuota</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>