force-app/main/default/objects/Order/listViews/Pedidos_sin_cargo_pendientes_por_aprobar.listView-meta.xml
<ListView>
    <fullName>Pedidos_sin_cargo_pendientes_por_aprobar</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>ORDERS.TOTAL_AMOUNT</columns>
    <columns>ORDERS.STATUS</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ORDER.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Order.Dan360_PedidoSinCargo</value>
    </filters>
    <filters>
        <field>Dan360_PedidoSinCargoAprobado__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Pedidos sin cargo pendientes por aprobar</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
        <group>Dan360_Autorizadores_SinCargo</group>
        <group>Dan360_Calidad</group>
        <group>Dan360_JefeVentasFarmacias</group>
        <group>Dan360_MarketingAdultos</group>
        <group>Dan360_MarketingConsumer</group>
        <group>Dan360_MarketingPediatricos</group>
        <group>Dan360_RecursosHumanos</group>
    </sharedTo>
</ListView>